# Thesis_Modules

hbk-opendaq-modules-main/: .gitignore  CMakeLists.txt  README.md
hbk-opendaq-modules-main/.github/workflows/: build-linux.yml  build-windows.yml
hbk-opendaq-modules-main/apps/: CMakeLists.txt
hbk-opendaq-modules-main/apps/advanced_recorder_test/: advanced_recorder_test.cpp
hbk-opendaq-modules-main/cmake/: hbk_module.cmake
hbk-opendaq-modules-main/dependencies/: Boost.cmake  OpenCV.cmake  openDAQ.cmake
hbk-opendaq-modules-main/modules/advanced_recorder_module/: CMakeLists.txt  descriptor.txt
hbk-opendaq-modules-main/modules/advanced_recorder_module/docs/: Doxyfile
hbk-opendaq-modules-main/modules/advanced_recorder_module/include/advanced_recorder_module/: advanced_recorder_impl.h  advanced_recorder_module_impl.h  advanced_recorder_signal.h  common.h  metadata.h  module_dll.h  signal_handler.h
hbk-opendaq-modules-main/modules/advanced_recorder_module/src/: advanced_recorder_impl.cpp  advanced_recorder_module_impl.cpp  advanced_recorder_signal.cpp  module_dll.cpp
hbk-opendaq-modules-main/modules/advanced_recorder_module/src/handlers/: can_signal_handler.cpp  scalar_linear_signal_handler.cpp
hbk-opendaq-modules-main/modules/advanced_recorder_module/src/sie/: xml.cpp
hbk-opendaq-modules-main/modules/advanced_recorder_module/tests/: test_block_writer.cpp
hbk-opendaq-modules-main/modules/camera_device_module/: CMakeLists.txt
hbk-opendaq-modules-main/modules/camera_device_module/include/camera_device_module/: camera_channel_impl.h  camera_device_impl.h  camera_device_module_impl.h  common.h  module_dll.h
hbk-opendaq-modules-main/modules/camera_device_module/src/: camera_channel_impl.cpp  camera_device_impl.cpp  camera_device_module_impl.cpp  module_dll.cpp
hbk-opendaq-modules-main/modules/camera_device_module/tests/: camera_device_module_factories.h  test_app.cpp  test_camera_device_module.cpp
hbk-opendaq-modules-main/modules/mtig710_device_module/: CMakeLists.txt
hbk-opendaq-modules-main/modules/mtig710_device_module/include/mtig710_device_module/: common.h  module_dll.h  mtig710_channel_impl.h  mtig710_device_impl.h  mtig710_device_module_impl.h
hbk-opendaq-modules-main/modules/mtig710_device_module/src/: module_dll.cpp  mtig710_channel_impl.cpp  mtig710_device_impl.cpp  mtig710_module_impl.cpp
hbk-opendaq-modules-main/modules/mtig710_device_module/tests/: mtig710_device_module_factories.h  test_mtig710_device_module.cpp
hbk-opendaq-modules-main/modules/playback_device_module/: CMakeLists.txt
hbk-opendaq-modules-main/modules/playback_device_module/include/playback_device_module/: common.h  module_dll.h  playback_channel_impl.h  playback_device_impl.h  playback_device_module_impl.h
hbk-opendaq-modules-main/modules/playback_device_module/src/: module_dll.cpp  playback_channel_impl.cpp  playback_device_impl.cpp  playback_device_module_impl.cpp
hbk-opendaq-modules-main/modules/playback_device_module/tests/: test_app.cpp  test_playback_device_module.cpp
hbk-opendaq-modules-main/modules/playback_device_module/tests/files/: example_recording.csv
hbk-opendaq-modules-main/modules/static_fatigue_module/: CMakeLists.txt
hbk-opendaq-modules-main/modules/static_fatigue_module/include/static_fatigue_module/: common.h  sg_subtraction_fb.h  static_fatigue_module_impl.h
hbk-opendaq-modules-main/modules/static_fatigue_module/src/: sg_subtraction_fb.cpp  static_fatigue_module_impl.cpp
hbk-opendaq-modules-main/modules/trigger_fb_module/include/trigger_fb_module/: common.h  logic_fb_impl.h  module_dll.h  trigger_fb_impl.h  trigger_fb_module_impl.h  trigger_gate_fb_impl.h
hbk-opendaq-modules-main/modules/trigger_fb_module/src/: module_dll.cpp  trigger_fb_impl.cpp  trigger_fb_module_impl.cpp
hbk-opendaq-modules-main/utilities/: CMakeLists.txt  README.md
(+16 files in other folders)
